# dv-ai

./: .env.sample  .flake8  .gitignore  Dockerfile  Dockerfile.celery  Makefile  README.md  cover_letter_01.txt  cover_letter_01_response.json  cover_letter_02.txt  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  folder_structure.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint_and_format_check.yml  python-ci.yml  test.yml
app/: config.py  main.py  worker.py
app/ai/: anthropic.py  gpt.py
app/core/: celery_app.py  celery_config.py  config.py  middleware.py
app/logs/ai_results/: result_20241028_152638.json
app/models/: evaluation_response.py  interview_evaluation_dto.py  questions_response.py
app/models/openai/: gpt.py
app/prompts/: evaluation.py  general-tech.txt  general_tech.yaml  general_tech_eval.yaml  prompt.py  question.py  real-tech.txt  real_personal.yaml  real_personal_eval.yaml  real_tech.yaml  real_tech_eval.yaml
app/routers/: aws.py  interview.py  task.py
app/schemas/: answer.py  base.py  evaluation.py  question.py  task.py
app/services/: ai_model.py  answer_service.py  evaluation_service.py  interview_service.py  question_service.py  s3_service.py  stt_factory.py  stt_service.py  tasks.py  tts_factory.py  tts_service.py
app/tests/: data.py  test_interview.py
app/utils/: calc.py  format.py  generate.py  init.py  llm_config.py  logger.py  merge.py  prompts.py  s3.py  save_file.py  wpm.py
lib/: api-spec.yaml
tests/: main.py
(+32 files in other folders)
